Converted FOSDEM README to a git-tracked plain text file

--- a/FOSDEM/README
+++ b/FOSDEM/README
@@ -1,1 +1,6 @@
-../.git/annex/objects/Jx/31/URL--http&c%%mirrors.dotsrc.org%fosdem%README/URL--http&c%%mirrors.dotsrc.org%fosdem%README
+These talks have been recorded at FOSDEM - https://fosdem.org/.
+
+Special thanks to Belnet, dotsrc.org, GeekSoc, AS35701, HEAnet
+and OSUOSL for the bandwidth.
+
+Please contact <info@fosdem.org> with any questions.
